seldon-core/seldon-monitoring.peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "disable-mtls"
  namespace: "seldon-monitoring"
spec:
  mtls:
    mode: DISABLE
