seldon-core/seldon-monitoring.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seldon-monitoring
  labels:
    app: seldon-monitoring
    service: seldon-monitoring
spec:
  ports:
    - name: http
      port: 9090
      targetPort: 9090
  selector:
    app: seldon-monitoring
