seldon-core/seldon-monitoring.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: seldon-monitoring-virtual-service
  namespace: seldon-monitoring
spec:
  gateways:
    - seldon-monitoring/seldon-gateway
  hosts:
    - "*"
  http:
    - name: seldon-monitoring-routes
      match:
        - port: 9090
      route:
        - destination:
            host: seldon-monitoring-prometheus
            port:
              number: 9090
